Revert "spacing fixes"
This reverts commit 94dd2132a4e14125bc9394b1d3a3465a3ca38f69.

--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -52,6 +52,10 @@ body {
   @apply pl-[22px];
 }
 
+.project-information-height {
+  max-height: calc(75vh - 145px);
+}
+
 .research .swiper-wrapper {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
